--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "require-dev": {
         "symfony/var-dumper": "^6.3"
+    },
+    "require": {
+        "vlucas/phpdotenv": "^5.5"
     }
 }
