feat/refactor : API
API complete for POST, GET and PATCH methods, database functions and entrypoints docs

--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,2 @@
 RewriteEngine On
-RewriteRule "^api/v1/fighters/([0-9]+)$" "api/v1/fighters/?id=$1"
+RewriteRule "^api/v1/([a-z0-9/-]+)$" "api/v1/?route=$1"
